--- a/src/partials/produkts.html
+++ b/src/partials/produkts.html
@@ -1,3 +1,25 @@
 <section class="products-section">
-    
+    <p class="products-section-text">100% natural</p>
+    <h2 class="products-section-title">products</h2>
+<ul class="products-list">
+
+<li class="products-list-item">
+    <div class="products-list-item-bg1">
+        <h3 class="products-item-name">ice cream</h3>
+        <p class="products-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+        <button class="products-item-button"></button>
+        </li>
+    </div>
+
+<li class="products-list-item">
+    <h3 class="products-item-name">ice coffee</h3>
+<p class="products-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+<button class="products-item-button"></button>
+</li>
+<li class="products-list-item">
+    <h3 class="products-item-name">milkshakes</h3>
+<p class="products-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+<button class="products-item-button"></button>
+</li>
+</ul>
 </section>
