--- a/src/sass/_produkts.scss
+++ b/src/sass/_produkts.scss
@@ -1,3 +1,46 @@
-.products-section {
-    background-color: cyan;
+.products-list {
+    list-style: none;
+    padding-left: 0;
+    padding-right: 0;
+}
+.products-list-item-bg1 {
+    height: 598px;
+    width: 100%;
+    background: #FFB8CA;
+    border-radius: 24px;
+    @media screen and (min-width: 480px) {
+    width: 280px;
+    height: 598px;
+    @media screen and (min-width: 480px) {
+    width: 220px;
+    height: 589px;
+    }
+    @media screen and (min-width: 480px) {
+    width: 335px;
+    height: 735px;
+    }
+    }
+}
+.products-section-text {
+    font-family: Titan One;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    text-transform: uppercase;
+    
+    color: #FFA5BA;
+}
+.products-section-title {
+    font-family: Titan One;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 34px;
+    line-height: 39px;
+    text-align: center;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    
+    color: #D41443;
 }
