--- a/src/partials/produkts.html
+++ b/src/partials/produkts.html
@@ -6,20 +6,35 @@
 <li class="products-list-item">
     <div class="products-list-item-bg1">
         <h3 class="products-item-name">ice cream</h3>
+        <svg class="products-svg">
+            <use href="./images/sprite.svg#products-circles"></use>
+        </svg>
         <p class="products-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
         <button class="products-item-button"></button>
-        </li>
     </div>
+</li>
+    
 
 <li class="products-list-item">
-    <h3 class="products-item-name">ice coffee</h3>
-<p class="products-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-<button class="products-item-button"></button>
+    <div class="products-list-item-bg2">
+        <h3 class="products-item-name">ice coffee</h3>
+        <svg class="products-svg">
+            <use href="./images/sprite.svg#products-circles"></use>
+        </svg>
+        <p class="products-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+        <button class="products-item-button"></button>
+    </div>
 </li>
+
 <li class="products-list-item">
-    <h3 class="products-item-name">milkshakes</h3>
-<p class="products-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-<button class="products-item-button"></button>
+    <div class="products-list-item-bg3">
+        <h3 class="products-item-name">milkshakes</h3>
+        <svg class="products-svg">
+            <use href="./images/sprite.svg#products-circles"></use>
+        </svg>
+        <p class="products-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
+        <button class="products-item-button"></button>
+    </div>
 </li>
 </ul>
 </section>
