--- a/src/partials/locations.html
+++ b/src/partials/locations.html
@@ -1,3 +1,100 @@
-<section>
-  <h4 class="locations">Locations</h4>
+<section class="container">
+  <div class="location-container">
+    <h2 hidden>Locations</h2>
+    <ul class="location-list list">
+      <li class="location-list-block">
+        <h3 class="location-list-title">CAFE</h3>
+        <div class=""></div>
+        <ul class="location-list-list">
+          <li>
+            <p class="location-list-city">Chicago</p>
+            <p class="location-list-info">
+              Fusce ut velit laoreet, tempus arcu molestie vulputate
+            </p>
+          </li>
+          <li list>
+            <p>Monday - Friday</p>
+            <p>06:00 AM - 10:00 PM</p>
+            <p>Saturday - Sunday</p>
+            <p>08:00 AM - 16:00 PM</p>
+          </li>
+          <li>
+            <address>
+              <a class="location-address link" href="tel:+610383766284"
+                >+61(0) 383 766 284
+              </a>
+              <a class="location-address link" href="mailto:noreply@envato.com"
+                >noreply@envato.com
+              </a>
+            </address>
+          </li>
+        </ul>
+      </li>
+      <li class="location-list-block">
+        <h3 class="location-list-title">FOOD TRUCK</h3>
+        <div class=""></div>
+        <ul class="location-list-list">
+          <li>
+            <p class="location-list-city">Los Angeles</p>
+            <p class="location-list-info">
+              Fusce ut velit laoreet, tempus arcu molestie vulputate
+            </p>
+          </li>
+          <li list>
+            <p>Monday - Friday</p>
+            <p>06:00 AM - 10:00 PM</p>
+            <p>Saturday - Sunday</p>
+            <p>08:00 AM - 16:00 PM</p>
+          </li>
+          <li>
+            <address>
+              <a class="location-address link" href="tel:+610383766284"
+                >+61(0) 383 766 284
+              </a>
+              <a class="location-address link" href="mailto:noreply@envato.com"
+                >noreply@envato.com
+              </a>
+            </address>
+          </li>
+        </ul>
+      </li>
+      <li class="location-list-block">
+        <h3 class="location-list-title">CAFE</h3>
+        <div class=""></div>
+        <ul class="location-list-list">
+          <li>
+            <p class="location-list-city">New York</p>
+            <p class="location-list-info">
+              Fusce ut velit laoreet, tempus arcu molestie vulputate
+            </p>
+          </li>
+          <li list>
+            <p>Monday - Friday</p>
+            <p>06:00 AM - 10:00 PM</p>
+            <p>Saturday - Sunday</p>
+            <p>08:00 AM - 16:00 PM</p>
+          </li>
+          <li>
+            <address>
+              <a class="location-address link" href="tel:+610383766284"
+                >+61(0) 383 766 284
+              </a>
+              <a class="location-address link" href="mailto:noreply@envato.com"
+                >noreply@envato.com
+              </a>
+            </address>
+          </li>
+        </ul>
+      </li>
+    </ul>
+    <button class="location-button">Our Locations</button>
+    <button class="location-button">Franchise</button>
+  </div>
 </section>
+
+<!--Один раз на проект установить все зависимости.
+
+npm install
+И запустить режим разработки.
+
+npm run dev-->
