--- a/src/sass/_locations.scss
+++ b/src/sass/_locations.scss
@@ -1,3 +1,24 @@
 .locations {
   color: tomato;
 }
+
+.location-container {
+  background: #fff5f6;
+}
+
+.location-list {
+  display: flex;
+  padding-bottom: 86px;
+}
+
+.location-list-block {
+  width: 330px;
+  height: 572px;
+  background: #ffffff;
+  box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+  border-radius: 24px;
+}
+
+.location-list-block:not(:last-child) {
+  margin-right: 30px;
+}
