--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,47 +1,44 @@
 <footer class="footer">
-    <div class="container">
-        <div class="footer-center">
-            <div class="footer-left">
-                <p class="footer-sekond-title">homemade ice cream made</p>
-                <h2 class="footer-title">with passion</h2>
-            </div>
-            <div class="footer-right">
-                <ul class="footer-right-social-item">
-                    <li class="footer-right-social-list">
-                        <a href="" aria-label="GitHub" class="footer-right-social-link"> <svg></svg>
-                            <use>
-
-                            </use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-right-social-list">
-                        <a href="" aria-label="Telegram" class="footer-right-social-link"> <svg>
-                                <use>
-
-                                </use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-right-social-list">
-                        <a href="" aria-label="Facebook" class="footer-right-social-link"><svg>
-                                <use>
-
-                                </use>
-                            </svg></a>
-                    </li>
-                </ul>
-                <b class="footer-right-tel">Feel free to contact <a href="tel:+610383766284">+61 &lpar;0&rpar; 383 766
-                        284</a></b>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <p class="footer-bottom-text">
-                &COPY; 2019 - IceCream. All Rights Reserved.
-            </p>
-        </div>
-
+  <div class="container">
+    <div class="footer-center">
+      <div class="footer-left">
+        <p class="footer-sekond-title">homemade ice cream made</p>
+        <h2 class="footer-title">with passion</h2>
+      </div>
+      <div class="footer-right">
+        <ul class="footer-right-social-item">
+          <li class="footer-right-social-list">
+            <a href="" aria-label="GitHub" class="footer-right-social-link">
+              <svg width="19" height="19">
+                <use href="./images/sprite.svg#github"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-right-social-list">
+            <a href="" aria-label="Telegram" class="footer-right-social-link">
+              <svg width="19" height="15">
+                <use href="./images/sprite.svg#telegram "></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-right-social-list">
+            <a href="" aria-label="Facebook" class="footer-right-social-link">
+              <svg width="9" height="19">
+                <use href="./images/sprite.svg#facebook "></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+        <b class="footer-right-tel"
+          >Feel free to contact
+          <a href="tel:+610383766284">+61 &lpar;0&rpar; 383 766 284</a></b
+        >
+      </div>
     </div>
-
-
+    <div class="footer-bottom">
+      <p class="footer-bottom-text">
+        &COPY; 2019 - IceCream. All Rights Reserved.
+      </p>
+    </div>
+  </div>
 </footer>
