добавлена разметка и оформление

--- a/src/partials/produkts.html
+++ b/src/partials/produkts.html
@@ -4,36 +4,82 @@
 <ul class="products-list">
 
 <li class="products-list-item">
+
     <div class="products-list-item-bg1">
+        <div class="products-image">
+            <picture>
+                <source srcset="./images/products/products-1d.png 1x, ./images/products/products-1d@2x.png 2x"
+                media="(min-width: 1200px)">
+                <source srcset="./images/products/products-1t.png 1x, ./images/products/products-1t@2x.png 2x"
+                media="(min-width: 768px)">
+                <source srcset="./images/products/products-1m.png 1x, ./images/products/products-1m@2x.png 2x"
+                media="(max-width: 767px)">
+                <img src="./images/products/products-1d.png" alt="мороженое" />
+            </picture>
+        </div>
         <h3 class="products-item-name">ice cream</h3>
         <svg class="products-svg">
             <use href="./images/sprite.svg#products-circles"></use>
         </svg>
         <p class="products-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-        <button class="products-item-button"></button>
+        <button class="products-item-button">
+            <svg class="products-button-svg">
+                <use href="./images/sprite.svg#arrow-right"></use>
+            </svg>
+        </button>
     </div>
 </li>
     
 
 <li class="products-list-item">
     <div class="products-list-item-bg2">
+        <div class="products-image">
+            <picture>
+                <source srcset="./images/products/products-2d.png 1x, ./images/products/products-2d@2x.png 2x"
+                media="(min-width: 1200px)">
+                <source srcset="./images/products/products-2t.png 1x, ./images/products/products-2t@2x.png 2x"
+                media="(min-width: 768px)">
+                <source srcset="./images/products/products-2m.png 1x, ./images/products/products-2m@2x.png 2x"
+                media="(max-width: 767px)">
+                <img src="./images/products/products-2d.png" alt="кофе" />
+            </picture>
+        </div>
         <h3 class="products-item-name">ice coffee</h3>
         <svg class="products-svg">
             <use href="./images/sprite.svg#products-circles"></use>
         </svg>
         <p class="products-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-        <button class="products-item-button"></button>
+        <button class="products-item-button">
+            <svg class="products-button-svg">
+                <use href="./images/sprite.svg#arrow-right"></use>
+            </svg>
+        </button>
     </div>
 </li>
 
 <li class="products-list-item">
     <div class="products-list-item-bg3">
+        <div class="products-image">
+            <picture>
+                <source srcset="./images/products/products-3d.png 1x, ./images/products/products-3d@2x.png 2x"
+                media="(min-width: 1200px)">
+                <source srcset="./images/products/products-3t.png 1x, ./images/products/products-3t@2x.png 2x"
+                media="(min-width: 768px)">
+                <source srcset="./images/products/products-3m.png 1x, ./images/products/products-3m@2x.png 2x"
+                media="(max-width: 767px)">
+                <img src="./images/products/products-3d.png" alt="шейк" />
+            </picture>
+        </div>
         <h3 class="products-item-name">milkshakes</h3>
         <svg class="products-svg">
             <use href="./images/sprite.svg#products-circles"></use>
         </svg>
         <p class="products-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-        <button class="products-item-button"></button>
+        <button class="products-item-button">
+            <svg class="products-button-svg">
+                <use href="./images/sprite.svg#arrow-right"></use>
+            </svg>
+        </button>
     </div>
 </li>
 </ul>
