--- a/src/sass/_produkts.scss
+++ b/src/sass/_produkts.scss
@@ -1,8 +1,33 @@
 .products-list {
     @extend %list;
     display: flex;
-    flex-direction: column;
     align-items: center;
+    justify-content: center;
+
+    @media screen and (max-width: 767px) {
+    flex-direction: column;
+    }
+}
+.products-list-item:not(:last-child) {
+    @media screen and (max-width: 767px) {
+    margin-bottom: 130px;
+    }
+}
+.products-list-item-bg1,
+.products-list-item-bg2,
+.products-list-item-bg3 {
+    border-radius: 24px;
+    width: 280px;
+    height: 485px;
+
+    @media screen and (min-width: 768px) {
+    width: 220px;
+    height: 485px;
+    }
+    @media screen and (min-width: 1200px) {
+    width: 329px;
+    height: 525px;
+    }
 }
 .products-list-item-bg1 {
     background: #FFB8CA;
@@ -16,71 +41,150 @@
 .products-list-item-bg1,
 .products-list-item-bg2,
 .products-list-item-bg3 {
-    border-radius: 24px;
-    width: 280px;
-    height: 598px;
-    @media screen and (min-width: 768px) {
-    width: 220px;
-    height: 589px;
-    }
-    @media screen and (min-width: 1200px) {
-    width: 335px;
-    height: 735px;
-    }
+    position: relative;
 }
 .products-section-text {
     font-family: $font-title;
     font-style: normal;
-    font-weight: 400;
+    font-weight: normal;
     font-size: 18px;
-    line-height: 1.16;
+    line-height: 21px;
+ 
     text-align: center;
     text-transform: uppercase;
     
     color: $subtitle-color;
+
+    @media screen and (min-width: 768px) {
+        font-size: 26px;
+        line-height: 30px;
+    }
+    @media screen and (min-width: 1200px) {
+        font-size: 30px;
+        line-height: 34px;
+    }
 }
 .products-section-title {
     font-family: $font-title;
     font-style: normal;
-    font-weight: 400;
+    font-weight: normal;
     font-size: 34px;
-    line-height: 1.14;
+    line-height: 39px;
     text-align: center;
     letter-spacing: 0.04em;
     text-transform: uppercase;
     
     color: $title-color;
+    margin-bottom: 144px;
+  
+    @media screen and (min-width: 768px) {
+    font-size: 48px;
+    line-height: 55px;
+    margin-bottom: 150px;
+    }
+    @media screen and (min-width: 1200px) {
+    font-size: 58px;
+    line-height: 66px;
+    margin-bottom: 259px;
+    }
+}
+.products-image {
+    position: absolute;
+
+    @media screen and (max-width: 767px) {
+    bottom: 70%;
+    left: 6%;
+    }
+    @media screen and (min-width: 768px) {
+    bottom: 75%;
+    }
+    @media screen and (min-width: 1200px) {
+    bottom: 80%;
+    } 
+}
+.products-list-item:not(last-child) {
+    @media screen and (min-width: 768px) {
+    margin-right: 20px;
+    }
+    @media screen and (min-width: 1200px) {
+    margin-right: 23px;
+    }
 }
 .products-item-name {
     font-family: $font-title;
     font-style: normal;
-    font-weight: 400;
-    font-size: 30px;
-    line-height: 1.13;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 23px;
     text-align: center;
     letter-spacing: 0.04em;
     text-transform: uppercase;
 
     color: $light-text-color;
+
+    margin: 0;
+    padding-bottom: 30px;
+    padding-top: 163px;
+    @media screen and (min-width: 768px) {
+        font-size: 20px;
+        line-height: 23px;
+    }
+    @media screen and (min-width: 1200px) {
+        font-size: 30px;
+        line-height: 34px;
+    }
 }
 .products-svg {
     width: 26px;
     height: 6px;
-    display: flex;
-    align-items: center;
+    display: block;
+    margin: 0 auto;
+    text-align: center;
 }
 .products-item-description {
     font-family: $font-primery;
     font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 176%;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 152%;
+
     text-align: center;
     letter-spacing: 0.04em;
     
     color: $light-text-color;
 
-    margin-left: 44px;
-    margin-right: 44px;
-}
+    margin-left: 41px;
+    margin-right: 41px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 
+    @media screen and (min-width: 768px) {
+        font-size: 14px;
+        line-height: 176%;
+        margin-left: 11px;
+        margin-right: 11px;
+        margin-bottom: 40px;
+    }
+    @media screen and (min-width: 1200px) {
+        font-size: 16px;
+        line-height: 176%;
+        margin-left: 44px;
+        margin-right: 44px;
+        margin-bottom: 62px;
+    }
+}
+.products-item-button {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: transparent;
+    background-color: #fff;
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+}
+.products-button-svg {
+    width: 11px;
+    height: 11px;
+    fill: $title-color;
+}
