--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,5 +1,4 @@
 .footer {
-  h1,
   h2,
   p {
     margin: 0;
@@ -150,6 +149,8 @@
 @media screen and (min-width: 1200px) {
   .footer {
     .container {
+      padding-left: 52px;
+      padding-right: 52px;
       max-width: 1200px;
     }
   }
