--- a/src/sass/_produkts.scss
+++ b/src/sass/_produkts.scss
@@ -46,9 +46,9 @@
 .products-section-text {
     font-family: $font-title;
     font-style: normal;
-    font-weight: normal;
+    font-weight: 400;
     font-size: 18px;
-    line-height: 21px;
+    line-height: 1.16;
  
     text-align: center;
     text-transform: uppercase;
@@ -56,20 +56,20 @@
     color: $subtitle-color;
 
     @media screen and (min-width: 768px) {
-        font-size: 26px;
-        line-height: 30px;
+    font-size: 26px;
+    line-height: 30px;
     }
     @media screen and (min-width: 1200px) {
-        font-size: 30px;
-        line-height: 34px;
+    font-size: 30px;
+    line-height: 34px;
     }
 }
 .products-section-title {
     font-family: $font-title;
     font-style: normal;
-    font-weight: normal;
+    font-weight: 400;
     font-size: 34px;
-    line-height: 39px;
+    line-height: 1.14;
     text-align: center;
     letter-spacing: 0.04em;
     text-transform: uppercase;
@@ -79,12 +79,12 @@
   
     @media screen and (min-width: 768px) {
     font-size: 48px;
-    line-height: 55px;
+    line-height: 1.14;
     margin-bottom: 150px;
     }
     @media screen and (min-width: 1200px) {
     font-size: 58px;
-    line-height: 66px;
+    line-height: 1.13;
     margin-bottom: 259px;
     }
 }
@@ -113,9 +113,9 @@
 .products-item-name {
     font-family: $font-title;
     font-style: normal;
-    font-weight: normal;
+    font-weight: 400;
     font-size: 20px;
-    line-height: 23px;
+    line-height: 1.15;
     text-align: center;
     letter-spacing: 0.04em;
     text-transform: uppercase;
@@ -127,11 +127,11 @@
     padding-top: 163px;
     @media screen and (min-width: 768px) {
         font-size: 20px;
-        line-height: 23px;
+        line-height: 1.15;
     }
     @media screen and (min-width: 1200px) {
         font-size: 30px;
-        line-height: 34px;
+        line-height: 1.13;
     }
 }
 .products-svg {
@@ -144,7 +144,7 @@
 .products-item-description {
     font-family: $font-primery;
     font-style: normal;
-    font-weight: bold;
+    font-weight: 700;
     font-size: 14px;
     line-height: 152%;
 
