--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,52 @@
 <header class="header">
-    <div class="container">
-        <a href="./index.html" class="logo link"></a>
-        <button type="button" class="menu-btn" aria-expanded="false" aria-controls="menu-wrapper" data-menu-button>
-      </div>
+  <div class="container">
+    <a class="link logo" href="./index.html" aria-label="логотип мороженное">
+      <img class="logo-img" src="./images/logo/logo.png" />
+    </a>
+    <button
+      type="button"
+      class="menu-btn"
+      aria-expanded="false"
+      aria-controls="menu-wrapper"
+      data-menu-button
+    >
+      <!-- <svg width="20" height="12">
+        <use class="icon-burger" href="./imeges/sprite.svg#burger"></use>
+        <use class="icon-close" href="./imeges/sprite.svg#close"></use>
+      </svg> -->
+    </button>
+    <button type="button" class="tablet-btn">
+      Buy now
+      <!-- <svg class="icon-vector" width="10" height="10">
+        <use href="./images/sprite.svg#basic-btn"></use>
+      </svg> -->
+    </button>
+    <div class="menu-wrapper" data-menu>
+      <button type="button" class="header-btn">
+        Buy now
+        <!-- <svg class="icon-vector" width="10" height="10">
+          <use href="./images/sprite.svg#basic-btn"></use>
+        </svg> -->
+      </button>
+      <nav class="navigation">
+        <ul class="list navigation-list">
+          <li class="navigation-list-item">
+            <a class="link navigation-list-link current" href="">Номе</a>
+          </li>
+          <li class="navigation-list-item">
+            <a class="link navigation-list-link" href="">About us </a>
+          </li>
+          <li class="navigation-list-item">
+            <a class="link navigation-list-link" href="">How it’s made?</a>
+          </li>
+          <li class="navigation-list-item">
+            <a class="link navigation-list-link" href="">Our products</a>
+          </li>
+          <li class="navigation-list-item">
+            <a class="link navigation-list-link" href="">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </div>
 </header>
-
