--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="container">
     <a class="link logo" href="./index.html" aria-label="логотип мороженное">
-      <img class="logo-img" src="./images/logo/logo.png" />
+      <!-- <img class="logo-img" src="./images/logo/logo.png" /> -->
     </a>
     <button
       type="button"
@@ -11,8 +11,8 @@
       data-menu-button
     >
       <!-- <svg width="20" height="12">
-        <use class="icon-burger" href="./imeges/sprite.svg#burger"></use>
-        <use class="icon-close" href="./imeges/sprite.svg#close"></use>
+        <use class="icon-burger" href="./images/sprite.svg#burger"></use>
+        <use class="icon-close" href="./images/sprite.svg#close"></use>
       </svg> -->
     </button>
     <button type="button" class="tablet-btn">
